# ty-find

./: .bumpver.toml  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  USAGE_EXAMPLE.md  bump-version.sh  clippy.toml  deny.toml  example.py  example_pyproject.toml  install.sh  install_for_python.sh  llms.txt  pyproject.toml  release.toml  setup.py  test_example.py  test_installation.py  test_members.py
.claude/: settings.json
.claude/skills/rust-review/: SKILL.md
.github/: dependabot.yml
.github/workflows/: audit.yml  benchmark.yml  build.yml  cargo-deny.yml  codeql.yml  docs.yml  publish.yml  release.yml  review.yml  smoke.yml
benchmarks/: baseline.json  run.sh  smoke.sh
docs/: book.toml  custom.css  daemon-architecture.md  generate-llms-txt.sh  implementation-summary.md  inject-shared.sh  lint-mermaid.mjs  mermaid-init.js  package-lock.json  package.json  publishing-to-pypi.md  theme.css
docs/dev/: ARCHITECTURE.md  COVERAGE.md  RELEASING.md
docs/shared/: claude-snippet.md
docs/src/: SUMMARY.md  how-it-works.md  index.md  performance.md  setup.md  troubleshooting.md
docs/src/commands/: daemon.md  definition.md  document-symbols.md  find.md  hover.md  inspect.md  interactive.md  list.md  members.md  overview.md  references.md  refs.md  show.md  type.md  workspace-symbols.md
docs/theme/: head.hbs
plans/: cli-first-approach.md  perf_improvements.md  project-assessment-and-roadmap.md  ty_lsp_cli_plan.md
python/ty_find/: __init__.py
src/: commands.rs  debug.rs  main.rs  ripgrep.rs
src/cli/: args.rs  generate_docs.rs  mod.rs  output.rs  style.rs
src/daemon/: client.rs  mod.rs  pidfile.rs  pool.rs  protocol.rs  server.rs
src/lsp/: client.rs  mod.rs  protocol.rs  server.rs
src/utils/: error.rs
src/workspace/: detection.rs  mod.rs  navigation.rs
test_project/: async_code.py  decorators.py  enums.py  exceptions.py  generics.py  main.py  models.py  patterns.py  protocols.py  pyproject.toml  typing_extras.py
test_project2/: app.py  pyproject.toml  services.py
tests/integration/: common.rs  test_basic.rs  test_complex_project.rs  test_daemon.rs  test_multi_workspace.rs  test_project_smoke.rs
ty_find/: __init__.py
