[package]
name = "ty-find"
version = "0.1.4"
edition = "2021"
description = "CLI tool for finding Python function definitions using ty's LSP server"
license = "MIT"
repository = "https://github.com/mojzis/ty-find"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.21", features = ["v4"] }
futures = "0.3"
thiserror = "2.0"
serde_repr = "0.1.20"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.25"
assert_cmd = "2.1"
predicates = "3.1"
libc = "0.2"

[[test]]
name = "test_basic"
path = "tests/integration/test_basic.rs"

[[test]]
name = "test_daemon"
path = "tests/integration/test_daemon.rs"

[[bin]]
name = "ty-find"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
