[package]
name = "ty-find"
version = "0.1.10"
edition = "2021"
description = "CLI tool for finding Python function definitions using ty's LSP server"
license = "MIT"
repository = "https://github.com/mojzis/ty-find"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "color"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_repr = "0.1.20"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.25"
assert_cmd = "2.1"
predicates = "3.1"
libc = "0.2"

[[test]]
name = "test_basic"
path = "tests/integration/test_basic.rs"

[[test]]
name = "test_daemon"
path = "tests/integration/test_daemon.rs"

[[bin]]
name = "ty-find"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
# deny rather than forbid so we can #[allow] the libc::getuid() calls
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Cherry-picked restriction lints
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "warn"
clone_on_ref_ptr = "warn"
exit = "warn"
await_holding_lock = "warn"
large_futures = "warn"

# Pedantic allows (too noisy for this codebase)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"

# Nursery allows (unstable/buggy lints)
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
option_if_let_else = "allow"
future_not_send = "allow"
