[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ty-find"
description = "CLI tool for finding Python function definitions using ty's LSP server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mojzis", email = "mojzisek@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
keywords = ["lsp", "python", "definition", "navigation", "ty"]
dynamic = ["version"]
dependencies = []

[project.urls]
homepage = "https://github.com/mojzis/ty-find"
repository = "https://github.com/mojzis/ty-find"
documentation = "https://github.com/mojzis/ty-find#readme"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]

[dependency-groups]
dev = [
    "ty",
]

[tool.maturin]
bindings = "bin"
strip = true
